<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <TextView
        android:id="@+id/lbl_nac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_calendar_24"
        android:drawablePadding="15dp"
        android:hint="@string/lbl_nac"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/lbl_ubi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_nac"
        android:drawableStart="@drawable/ic_home_24"
        android:drawablePadding="15dp"
        android:hint="@string/lbl_ubi"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="320dp" />

    <TextView
        android:id="@+id/lbl_fono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_nac"
        android:drawableStart="@drawable/ic_phone_24"
        android:drawablePadding="15dp"
        android:hint="@string/lbl_fono"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/lbl_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_fono"
        android:drawableStart="@drawable/ic_mail_24"
        android:drawablePadding="15dp"
        android:hint="@string/lbl_correo"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:textSize="13dp"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="320dp" />

</androidx.constraintlayout.widget.ConstraintLayout>