<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <TextView
        android:id="@+id/lbl_nomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:hint="@string/lbl_nomb"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp" />

    <TextView
        android:id="@+id/lbl_skil1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_nomb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:hint="@string/lbl_skil1"
        android:textColorHint="@color/arena"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp" />

    <TextView
        android:id="@+id/lbl_skil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_skil1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="236dp"
        android:hint="@string/lbl_skil2"
        android:textColorHint="@color/arena"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp" />

</androidx.constraintlayout.widget.ConstraintLayout>